# zahir-sample

./: Cargo.toml  README.md
examples/: hypercube.rs
src/: lib.rs  utils.rs
src/collections/: enum_bit_set.rs  mod.rs
src/geometry/: distance_metric.rs  lattice_neighborhood.rs  mod.rs  point.rs  real_point.rs  vertex_neighborhood.rs
src/noise/: const_node.rs  function.rs  gradient.rs  harmonic_node.rs  hypersphere_node.rs  invert_node.rs  lerp_node.rs  mod.rs  noise_node.rs  overlay_node.rs  perlin_node.rs  screen_node.rs  sigmoid_node.rs  soft_light_node.rs  tile_node.rs  worley_node.rs
src/random/: extended_rng.rs  hash_fn.rs  mod.rs  seed.rs  seedable.rs  wyhash.rs
